--- a/fontscale.sty
+++ b/fontscale.sty
@@ -8,8 +8,8 @@
 \NeedsTeXFormat{LaTeX2e}[2023-11-01]
 \ProvidesExplPackage
   {fontscale}
-  {2024-09-10}
-  {2.4.0}
+  {2024-09-20}
+  {3.0.0}
   {A flexible interface for setting font sizes}
 
 % l3kernel version 2023-10-10 added many 'e'-variants.
@@ -26,7 +26,10 @@
 
 % This package does not require any other packages!
 
-% DECLARE FONT SIZE PARAMETER VARIABLES
+% SOME VARIABLES
+
+% Declares and initializes the font step, font scale, font size, and font
+% baselineskip of each font size command from \tiny to \Huge.
 
 \fp_const:Nn \c_fontscale_tiny_step_fp         { -4 }
 \fp_const:Nn \c_fontscale_scriptsize_step_fp   { -3 }
@@ -73,8 +76,6 @@
 \skip_new:N \l_fontscale_huge_baselineskip_skip
 \skip_new:N \l_fontscale_Huge_baselineskip_skip
 
-% INITIALIZE FONT SIZE PARAMETER VARIABLES
-
 \fp_set:Nn \l_fontscale_tiny_scale_fp         { 0.6 }
 \fp_set:Nn \l_fontscale_scriptsize_scale_fp   { 0.7 }
 \fp_set:Nn \l_fontscale_footnotesize_scale_fp { 0.8 }
@@ -107,16 +108,118 @@
 \skip_set:Nn \l_fontscale_huge_baselineskip_skip         { 19.2pt }
 \skip_set:Nn \l_fontscale_Huge_baselineskip_skip         { 21.6pt }
 
-% SOME VARIABLES
+% Stores the current font step, font scale, font size, and font baselineskip.
+% They are set in the selectfont hook.
+\fp_new:N   \l_fontscale_step_fp
+\fp_new:N   \l_fontscale_scale_fp
+\dim_new:N  \l_fontscale_size_dim
+\skip_new:N \l_fontscale_baselineskip_skip
+
+% For speed, \__fontscale_hook_selectfont: tries to avoid computing a floating
+% point expression by using \fp_set_eq:NN when the font size equals the font
+% size of any font size command from \tiny to \Huge. The case when the font
+% size equals that of \normalsize is optimized further because it is by far
+% the most common case.
+\hook_gput_code:nnn { selectfont } { fontscale }
+  { \__fontscale_hook_selectfont: }
+\cs_new_protected:Npn \__fontscale_hook_selectfont:
+  {
+    \dim_set:Nn \l_fontscale_size_dim { \f@size pt }
+    \skip_set:Nn \l_fontscale_baselineskip_skip { \f@baselineskip }
+    \dim_compare:nNnTF \l_fontscale_size_dim = \l_fontscale_normalsize_size_dim
+      {
+        \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_normalsize_step_fp
+        \fp_set_eq:NN \l_fontscale_scale_fp \c_fontscale_normalsize_scale_fp
+      }
+      { \__fontscale_hook_selectfont_auxi: }
+  }
+\cs_new_protected:Npn \__fontscale_hook_selectfont_auxi:
+  {
+    \dim_case:nnF { \l_fontscale_size_dim }
+      {
+        { \l_fontscale_small_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_small_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_small_scale_fp
+        }
+        { \l_fontscale_large_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_large_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_large_scale_fp
+        }
+        { \l_fontscale_footnotesize_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp \c_fontscale_footnotesize_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp
+            \l_fontscale_footnotesize_scale_fp
+        }
+        { \l_fontscale_Large_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_Large_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_Large_scale_fp
+        }
+        { \l_fontscale_scriptsize_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_scriptsize_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_scriptsize_scale_fp
+        }
+        { \l_fontscale_LARGE_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_LARGE_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_LARGE_scale_fp
+        }
+        { \l_fontscale_tiny_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_tiny_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_tiny_scale_fp
+        }
+        { \l_fontscale_huge_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_huge_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_huge_scale_fp
+        }
+        { \l_fontscale_Huge_size_dim }
+        {
+          \fp_set_eq:NN \l_fontscale_step_fp  \c_fontscale_Huge_step_fp
+          \fp_set_eq:NN \l_fontscale_scale_fp \l_fontscale_Huge_scale_fp
+        }
+      }
+      { \__fontscale_hook_selectfont_auxii: }
+  }
+% For speed, \f@size is used here instead of \l_fontscale_size_dim. The case
+% where the base font size of the musical typographic scale equals the font
+% size of \normalsize is optimized further.
+\cs_new_protected:Npn \__fontscale_hook_selectfont_auxii:
+  {
+    \fp_set:Nn \l_fontscale_scale_fp
+      { \f@size / \l__fontscale_normalsize_size_fp }
+    \str_if_eq:VnTF \l__fontscale_typographic_scale_str { musical }
+      {
+        \dim_compare:nNnTF \l__fontscale_musical_base_dim =
+          \l_fontscale_normalsize_size_dim
+          {
+            \fp_set:Nn \l_fontscale_step_fp
+              { \l__fontscale_musical_aux_fp * ln ( \l_fontscale_scale_fp ) }
+          }
+          {
+            \fp_set:Nn \l_fontscale_step_fp
+              {
+                \l__fontscale_musical_aux_fp
+                * ln ( \f@size / \l__fontscale_musical_base_fp )
+              }
+          }
+      }
+      { \fp_set_eq:NN \l_fontscale_step_fp \c_nan_fp }
+  }
 
 % Used to speed up floating point calculations.
 \fp_new:N \l__fontscale_normalsize_size_fp
 \fp_set:Nn \l__fontscale_normalsize_size_fp { 10 }
 \fp_new:N \l__fontscale_musical_base_fp
 \fp_new:N \l__fontscale_musical_notes_fp
+\fp_new:N \l__fontscale_musical_aux_fp
 
 % Scratch variables
-\tl_new:N   \l__fontscale_tmp_tl
 \str_new:N  \l__fontscale_tmp_str
 \dim_new:N  \l__fontscale_tmp_dim
 \skip_new:N \l__fontscale_tmp_skip
@@ -127,7 +230,7 @@
 % Variants of l3kernel functions
 \cs_generate_variant:Nn \msg_error:nnnn { nnv , nne }
 % Sets a dimen/skip variable from a dimen/skip expression, appending a default
-% unit of pt. This also removes extra tokens.
+% unit of pt. This also removes any extra tokens.
 \cs_new_protected:Npn \__fontscale_dim_set_default_pt:Nn #1#2
   {
     \afterassignment \use_none_delimit_by_q_stop:w
@@ -142,6 +245,18 @@
     \q_stop
   }
 \cs_generate_variant:Nn \__fontscale_skip_set_default_pt:Nn { c }
+% Argument processors. A default 'pt' is appended only in user-level commands,
+% not in internal programming functions.
+\cs_new_protected:Npn \__fontscale_arg_to_dim_default_pt:n #1
+  {
+    \__fontscale_dim_set_default_pt:Nn \l__fontscale_tmp_dim {#1}
+    \tl_set:NV \ProcessedArgument \l__fontscale_tmp_dim
+  }
+\cs_new_protected:Npn \__fontscale_arg_to_skip_default_pt:n #1
+  {
+    \__fontscale_skip_set_default_pt:Nn \l__fontscale_tmp_skip {#1}
+    \tl_set:NV \ProcessedArgument \l__fontscale_tmp_skip
+  }
 % Used to define \tiny to \Huge. Sets \@currsize only for compatibility. Need
 % \dim_use:N only for compatibility with the microtype package.
 \cs_new_protected:Npn \__fontscale_fontsize:NNN #1#2#3
@@ -150,48 +265,45 @@
     \fontsize { \dim_use:N #2 } #3 \selectfont
   }
 % Similar to \fontsize + \selectfont, except that it:
-% (1) Takes dimen and skip expressions as arguments.
+% (1) Takes dimen and skip expressions as arguments without appending a
+% default unit of pt.
 % (2) Avoids the issue where \f@size is set to the new font size before the
 % second argument is expanded.
 % (3) Issues a user-friendly error message if the font size is not a positive
 % length.
-\dim_new:N  \l__fontscale_fontsize_dim
-\skip_new:N \l__fontscale_fontsize_skip
-\cs_new_protected:Npn \__fontscale_fontsize:nn #1#2
+\cs_new_protected:Npn \__fontscale_set_font_size_baselineskip:nn #1#2
   {
-    \__fontscale_dim_set_default_pt:Nn  \l__fontscale_fontsize_dim  {#1}
-    \__fontscale_skip_set_default_pt:Nn \l__fontscale_fontsize_skip {#2}
-    \dim_compare:nNnTF \l__fontscale_fontsize_dim > \c_zero_dim
+    \use:e
       {
-        \fontsize \l__fontscale_fontsize_dim \l__fontscale_fontsize_skip
-        \selectfont
+        \__fontscale_set_font_size_baselineskip_aux:nn
+          { \dim_eval:n {#1} } { \skip_eval:n {#2} }
       }
-      {
-        \msg_error:nnV { fontscale } { font-size-out-of-bounds }
-          \l__fontscale_fontsize_dim
-      }
+  }
+\cs_new_protected:Npn \__fontscale_set_font_size_baselineskip_aux:nn #1#2
+  {
+    \dim_compare:nNnTF {#1} > \c_zero_dim
+      { \fontsize {#1} {#2} \selectfont }
+      { \msg_error:nnn { fontscale } { font-size-out-of-bounds } {#1} }
   }
 % Similar to the above function, except that it sets the font baselineskip
 % equal to the new font size times the baselineskip-size-ratio.
-\cs_new_protected:Npn \__fontscale_fontsize:n #1
+\cs_new_protected:Npn \__fontscale_set_font_size_baselineskip:n #1
   {
-    \__fontscale_dim_set_default_pt:Nn \l__fontscale_fontsize_dim {#1}
-    \dim_compare:nNnTF \l__fontscale_fontsize_dim > \c_zero_dim
+    \use:e
       {
-        \fontsize \l__fontscale_fontsize_dim
-          {
-            \fp_to_dim:n
-              {
-                \l__fontscale_fontsize_dim
-                * \l__fontscale_baselineskip_size_ratio_fp
-              }
-          }
+        \__fontscale_set_font_size_baselineskip_aux:n
+          { \dim_to_decimal:n {#1} }
+      }
+  }
+\cs_new_protected:Npn \__fontscale_set_font_size_baselineskip_aux:n #1
+  {
+    \dim_compare:nNnTF { #1 pt } > \c_zero_dim
+      {
+        \fontsize { #1 pt }
+          { \fp_to_dim:n { #1 * \l__fontscale_baselineskip_size_ratio_fp } }
         \selectfont
       }
-      {
-        \msg_error:nnV { fontscale } { font-size-out-of-bounds }
-          \l__fontscale_fontsize_dim
-      }
+      { \msg_error:nnn { fontscale } { font-size-out-of-bounds } { #1 pt } }
   }
 
 % MESSAGES
@@ -448,8 +560,6 @@
     , Huge .value_required:n = true
   }
 
-% INITIALIZE AND PRE-COMPILE KEYS
-
 % Pre-compiles the keys with their initial values and then sets the keys to
 % their initial values. This is significantly faster than using .initial:n and
 % \keys_precompile:nnN.
@@ -682,6 +792,11 @@
             { \l__fontscale_musical_base_dim }
           \fp_set:Nn \l__fontscale_musical_notes_fp
             { \l__fontscale_musical_notes_int }
+          \fp_set:Nn \l__fontscale_musical_aux_fp
+            {
+              \l__fontscale_musical_notes_fp
+              / ln ( \l__fontscale_musical_ratio_fp )
+            }
         }
       }
     \tl_map_function:nN
@@ -737,20 +852,25 @@
       { \__fontscale_keys_process_other_fn_aux:n {#1} }
     \prg_break:
     \prg_break_point:
-    \fp_set:cn { l_fontscale_#1_scale_fp }
-      { \use:c { l_fontscale_#1_size_dim } / \l__fontscale_normalsize_size_fp }
     \quark_if_no_value:cTF { l__fontscale_#1_baselineskip_tl }
       {
+        \fp_set:Nn \l__fontscale_tmp_fp { \use:c { l_fontscale_#1_size_dim } }
+        \fp_set:cn { l_fontscale_#1_scale_fp }
+          { \l__fontscale_tmp_fp / \l__fontscale_normalsize_size_fp }
         \skip_set:cn { l_fontscale_#1_baselineskip_skip }
           {
             \fp_to_dim:n
               {
-                \use:c { l_fontscale_#1_size_dim }
-                * \l__fontscale_baselineskip_size_ratio_fp
+                \l__fontscale_tmp_fp * \l__fontscale_baselineskip_size_ratio_fp
               }
           }
       }
       {
+        \fp_set:cn { l_fontscale_#1_scale_fp }
+          {
+            \use:c { l_fontscale_#1_size_dim }
+            / \l__fontscale_normalsize_size_fp
+          }
         \__fontscale_skip_set_default_pt:cn
           { l_fontscale_#1_baselineskip_skip }
           { \use:c { l__fontscale_#1_baselineskip_tl } }
@@ -925,99 +1045,74 @@
 
 \NewExpandableDocumentCommand \CurrentFontStep { } { \__fontscale_step: }
 \cs_new:Npn \__fontscale_step:
-  {
-    \dim_case:nnF { \f@size pt }
-      {
-        { \l_fontscale_tiny_size_dim         } { -4 }
-        { \l_fontscale_scriptsize_size_dim   } { -3 }
-        { \l_fontscale_footnotesize_size_dim } { -2 }
-        { \l_fontscale_small_size_dim        } { -1 }
-        { \l_fontscale_normalsize_size_dim   } {  0 }
-        { \l_fontscale_large_size_dim        } {  1 }
-        { \l_fontscale_Large_size_dim        } {  2 }
-        { \l_fontscale_LARGE_size_dim        } {  3 }
-        { \l_fontscale_huge_size_dim         } {  4 }
-        { \l_fontscale_Huge_size_dim         } {  5 }
-      }
-      {
-        \str_if_eq:VnT \l__fontscale_typographic_scale_str { musical }
-          {
-            \fp_eval:n
-              {
-                \l__fontscale_musical_notes_fp
-                * ln ( \f@size / \l__fontscale_musical_base_fp )
-                / ln ( \l__fontscale_musical_ratio_fp )
-              }
-          }
-      }
-  }
+  { \fp_if_nan:nF { \l_fontscale_step_fp } { \fp_use:N \l_fontscale_step_fp } }
 
 \NewExpandableDocumentCommand \CurrentFontScale { } { \__fontscale_scale: }
-\cs_new:Npn \__fontscale_scale:
-  { \fp_eval:n { \f@size / \l__fontscale_normalsize_size_fp } }
+\cs_new:Npn \__fontscale_scale: { \fp_use:N \l_fontscale_scale_fp }
 
 \NewExpandableDocumentCommand \CurrentFontSize { } { \__fontscale_size: }
-\cs_new:Npn \__fontscale_size: { \f@size pt }
+\cs_new:Npn \__fontscale_size: { \dim_use:N \l_fontscale_size_dim }
 
 \NewExpandableDocumentCommand \CurrentFontBaselineskip { }
   { \__fontscale_baselineskip: }
-\cs_new:Npn \__fontscale_baselineskip: { \f@baselineskip }
+\cs_new:Npn \__fontscale_baselineskip:
+  { \skip_use:N \l_fontscale_baselineskip_skip }
 
 \NewExpandableDocumentCommand \CurrentFontSizeCommand { }
   { \__fontscale_name: }
 \cs_new:Npn \__fontscale_name:
   {
-    \dim_case:nn { \f@size pt }
+    \dim_case:nn { \l_fontscale_size_dim }
       {
         { \l_fontscale_tiny_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_tiny_baselineskip_skip }
-            { \f@baselineskip } { tiny }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_tiny_baselineskip_skip } { tiny }
         }
         { \l_fontscale_scriptsize_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_scriptsize_baselineskip_skip }
-            { \f@baselineskip } { scriptsize }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_scriptsize_baselineskip_skip } { scriptsize }
         }
         { \l_fontscale_footnotesize_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_footnotesize_baselineskip_skip }
-            { \f@baselineskip } { footnotesize }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_footnotesize_baselineskip_skip } { footnotesize }
         }
         { \l_fontscale_small_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_small_baselineskip_skip }
-            { \f@baselineskip } { small }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_small_baselineskip_skip } { small }
         }
         { \l_fontscale_normalsize_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_normalsize_baselineskip_skip }
-            { \f@baselineskip } { normalsize }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_normalsize_baselineskip_skip } { normalsize }
         }
         { \l_fontscale_large_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_large_baselineskip_skip }
-            { \f@baselineskip } { large }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_large_baselineskip_skip } { large }
         }
         { \l_fontscale_Large_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_Large_baselineskip_skip }
-            { \f@baselineskip } { Large }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_Large_baselineskip_skip } { Large }
         }
         { \l_fontscale_LARGE_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_LARGE_baselineskip_skip }
-            { \f@baselineskip } { LARGE }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_LARGE_baselineskip_skip } { LARGE }
         }
         { \l_fontscale_huge_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_huge_baselineskip_skip }
-            { \f@baselineskip } { huge }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_huge_baselineskip_skip } { huge }
         }
         { \l_fontscale_Huge_size_dim }
         {
-          \skip_if_eq:nnT { \l_fontscale_Huge_baselineskip_skip }
-            { \f@baselineskip } { Huge }
+          \skip_if_eq:nnT { \l_fontscale_baselineskip_skip }
+            { \l_fontscale_Huge_baselineskip_skip } { Huge }
         }
       }
   }
@@ -1055,7 +1150,7 @@
       {
         \str_if_eq:VnTF \l__fontscale_typographic_scale_str { musical }
           {
-            \__fontscale_fontsize:n
+            \__fontscale_set_font_size_baselineskip:n
               {
                 \fp_to_dim:n
                   {
@@ -1073,12 +1168,10 @@
   }
 \cs_new_protected:Npn \__fontscale_add_font_step:n #1
   {
-    \tl_set:Ne \l__fontscale_tmp_tl { \__fontscale_step: }
-    \tl_if_empty:NTF \l__fontscale_tmp_tl
+    \fp_if_nan:nTF { \l_fontscale_step_fp }
       { \msg_error:nn { fontscale } { current-font-step-out-of-bounds } }
-      { \__fontscale_add_font_step_aux:n { (#1) + \l__fontscale_tmp_tl } }
+      { \__fontscale_set_font_step:n { (#1) + \l_fontscale_step_fp } }
   }
-\cs_new_eq:NN \__fontscale_add_font_step_aux:n \__fontscale_set_font_step:n
 
 \NewDocumentCommand \SetFontScale { s m }
   {
@@ -1095,16 +1188,14 @@
   }
 \cs_new_protected:Npn \__fontscale_set_font_scale:n #1
   {
-    \__fontscale_fontsize:n
-      { \fp_to_dim:n { \l__fontscale_normalsize_size_fp * (#1) } }
+    \__fontscale_set_font_size_baselineskip:n
+      { \fp_to_dim:n { (#1) * \l__fontscale_normalsize_size_fp } }
   }
 \cs_new_protected:Npn \__fontscale_add_font_scale:n #1
-  {
-    \__fontscale_fontsize:n
-      { \fp_to_dim:n { \l__fontscale_normalsize_size_fp * (#1) + \f@size } }
-  }
+  { \__fontscale_set_font_scale:n { (#1) + \l_fontscale_scale_fp } }
 
-\NewDocumentCommand \SetFontSize { s m }
+\NewDocumentCommand \SetFontSize
+  { s >{ \__fontscale_arg_to_dim_default_pt:n } m }
   {
     \mode_if_math:TF
       {
@@ -1117,12 +1208,10 @@
           { \__fontscale_set_font_size:n {#2} }
       }
   }
-\cs_new_eq:NN \__fontscale_set_font_size:n \__fontscale_fontsize:n
+\cs_new_eq:NN \__fontscale_set_font_size:n
+  \__fontscale_set_font_size_baselineskip:n
 \cs_new_protected:Npn \__fontscale_add_font_size:n #1
-  {
-    \__fontscale_dim_set_default_pt:Nn \l__fontscale_tmp_dim {#1}
-    \__fontscale_fontsize:n { \l__fontscale_tmp_dim + \f@size pt }
-  }
+  { \__fontscale_set_font_size:n { (#1) + \l_fontscale_size_dim } }
 
 \NewDocumentCommand \ScaleFont { m }
   {
@@ -1136,15 +1225,18 @@
 \cs_new_protected:Npn \__fontscale_scale_font:n #1
   {
     \fp_set:Nn \l__fontscale_tmp_fp {#1}
-    \__fontscale_fontsize:nn
-      { \fp_to_dim:n { \f@size * \l__fontscale_tmp_fp } }
+    \__fontscale_set_font_size_baselineskip:nn
+      { \fp_to_dim:n { \l__fontscale_tmp_fp * \l_fontscale_size_dim } }
       {
-        \fp_to_dim:n
-          { \dim_to_fp:n { \f@baselineskip } * \l__fontscale_tmp_fp }
+        \fp_to_dim:n { \l__fontscale_tmp_fp * \l_fontscale_baselineskip_skip }
       }
   }
 
-\NewDocumentCommand \SetFontSizeBaselineskip { m m }
+\NewDocumentCommand \SetFontSizeBaselineskip
+  {
+    >{ \__fontscale_arg_to_dim_default_pt:n  } m
+    >{ \__fontscale_arg_to_skip_default_pt:n } m
+  }
   {
     \mode_if_math:TF
       {
@@ -1153,10 +1245,9 @@
       }
       { \__fontscale_set_font_size_baselineskip:nn {#1} {#2} }
   }
-\cs_new_eq:NN \__fontscale_set_font_size_baselineskip:nn
-  \__fontscale_fontsize:nn
 
-\NewDocumentCommand \SetFontBaselineskip { s m }
+\NewDocumentCommand \SetFontBaselineskip
+  { s >{ \__fontscale_arg_to_skip_default_pt:n } m }
   {
     \mode_if_math:TF
       {
@@ -1170,12 +1261,11 @@
       }
   }
 \cs_new_protected:Npn \__fontscale_set_font_baselineskip:n
-  { \__fontscale_fontsize:nn { \f@size pt } }
+  { \__fontscale_set_font_size_baselineskip:nn { \l_fontscale_size_dim } }
 \cs_new_protected:Npn \__fontscale_add_font_baselineskip:n #1
   {
-    \__fontscale_skip_set_default_pt:Nn \l__fontscale_tmp_skip {#1}
-    \__fontscale_fontsize:nn { \f@size pt }
-      { \l__fontscale_tmp_skip + \f@baselineskip }
+    \__fontscale_set_font_baselineskip:n
+      { (#1) + \l_fontscale_baselineskip_skip }
   }
 
 \NewDocumentCommand \PrintFontSizeParameters { }
